Styles: add blur to avoid motion sickness and change z-index

--- a/src/main.css
+++ b/src/main.css
@@ -33,6 +33,9 @@ a, a:visited {
   left: 0;
   right: 0;
   height: 110%;
+
+  z-index: -1;
+  filter: blur(0.2rem);
 }
 
 .stars {
